	  should only affect you if your client-side code (CSS, JS) references 
	  the field names
	- New "nested" params support. Form and Block elements have a new 
	  nested_name() method. Field elements have new nested(), nested_name() 
	  and nested_names() methods. Doesn't require CGI::Expand or 
	  Catalyst::Plugin::NestedParams

0.01006 2007-10-23

	- render_class_args->{INCLUDE_PATH} now defaults to 'root' if it's not 
	  set - previously was only set if the entire render_class_args hashref 
	  was empty
	- New StripWhitespace OutputProcessor
	- New CopyValue Filter
	- New Cookbook and Unicode manual pages
	- New unicode example Catalyst application
	- New portuguese I18N translation
	- Callback Filters, Constraints and Validators now accept a fully 
	  qualified subroutine name instead of a code-ref
	- Date element month names from DateTime::Locale are run through ucfirst
	- Documentation improvements
	- Bugfix: forced errors are now displayed

0.01005 2007-09-21

	- New Indent "output processor" to pretty-print output
	- New force_default() method on fields
	- New when() method for all Constraints
	- Behaviour change for MinMaxFields Constraint

0.01004 2007-09-12

	- New html_formfu_deploy.pl helper program
	- AutoSet Constraint now works with Select optgroups
	- Added vertically-aligned CSS example
	- Fix circular reference / memory leak
	- Documentations fixes / additions
	- require v0.7901 of DateTime::Format::Builder to fix memory leak

0.01003	2007-08-22

	- Add missing prereq to Makefile.PL

0.01002	2007-08-22

	- Fixed missing imports causing errors with perl 5.9.x

0.01001	2007-08-22

	- First non-dev release
	- All Element names now follow CamelCase convention
	- Key format of I18N files changed
	- New Date element
	- Use Class::C3 instead of SUPER
	- Automatically set UTF-8 encoding on TT
	- Support for Template::Alloy instead of TT

0.01000_02	2007-07-02

	- Updated templates in tt_files.pm - 0.01000_02 was out of date

0.01000_02	2007-07-02
