@@ -1,0 +1,1 @@
+[% WRAPPER field %][% INCLUDE $self.checkboxgroup_filename %][% END %]
